--- a/index.html
+++ b/index.html
@@ -2,8 +2,48 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="application-name" content="Pundi Niaga Khatulistiwa" />
+    <meta
+      name="description"
+      content="Pundi Niaga Khatulistiwa adalah perusahaan terkemuka yang bergerak di bidang transportasi Crude Palm Oil (CPO) atau minyak kelapa sawit. Berkomitmen untuk menyediakan layanan logistik yang efisien dan andal, Pundi Niaga Khatulistiwa melayani berbagai kebutuhan pengangkutan CPO dari perkebunan hingga ke pabrik pengolahan dan pelabuhan ekspor.\nPerusahaan ini didukung oleh armada transportasi yang modern dan canggih, serta tenaga kerja profesional yang berpengalaman di industri kelapa sawit. Dengan fokus pada ketepatan waktu, keamanan, dan kepuasan pelanggan, Pundi Niaga Khatulistiwa memastikan bahwa setiap pengiriman dilakukan dengan standar tertinggi.\nSelain itu, Pundi Niaga Khatulistiwa juga menerapkan praktik bisnis yang berkelanjutan dan ramah lingkungan, sejalan dengan komitmen untuk mendukung perkembangan industri kelapa sawit yang berkelanjutan di Indonesia. Dengan inovasi dan dedikasi yang terus menerus, Pundi Niaga Khatulistiwa siap menjadi mitra terpercaya dalam transportasi CPO, mendukung pertumbuhan ekonomi dan kesejahteraan masyarakat."
+    />
+    <meta name="keywords" content="Pundi Niaga Khatulistiwa" />
+    <meta name="author" content="Jezskuy" />
+    <meta name="creator" content="Jezskuy" />
+
+    <meta property="og:title" content="Pundi Niaga Khatulistiwa" />
+    <meta
+      property="og:description"
+      content="Pundi Niaga Khatulistiwa: Perusahaan terkemuka dalam transportasi Crude Palm Oil (CPO), mengutamakan layanan logistik andal dengan armada modern dan profesional berpengalaman. Berkomitmen pada ketepatan waktu, keamanan, dan praktik bisnis berkelanjutan, Pundi Niaga Khatulistiwa adalah mitra terpercaya untuk mendukung industri kelapa sawit berkelanjutan di Indonesia."
+    />
+    <meta
+      property="og:image"
+      content="https://Jezskuy.github.io/pundiniagakhatulistiwa/favicon.ico"
+    />
+    <meta
+      property="og:url"
+      content="https://Jezskuy.github.io/pundiniagakhatulistiwa"
+    />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Pundi Niaga Khatulistiwa" />
+    <meta
+      name="twitter:description"
+      content="Pundi Niaga Khatulistiwa: Perusahaan terkemuka dalam transportasi Crude Palm Oil (CPO), mengutamakan layanan logistik andal dengan armada modern dan profesional berpengalaman. Berkomitmen pada ketepatan waktu, keamanan, dan praktik bisnis berkelanjutan, Pundi Niaga Khatulistiwa adalah mitra terpercaya untuk mendukung industri kelapa sawit berkelanjutan di Indonesia."
+    />
+    <meta
+      name="twitter:image"
+      content="https://Jezskuy.github.io/pundiniagakhatulistiwa/favicon.ico"
+    />
+    <meta
+      name="twitter:url"
+      content="https://Jezskuy.github.io/pundiniagakhatulistiwa"
+    />
+
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="author" href="https://Jezskuy.github.io/" />
     <title>Vite App</title>
   </head>
   <body>
